--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
       "react/jsx-filename-extension": [1, {"extensions":[".tsx"]}],
       "no-unused-expressions": "off",
       "import/prefer-default-export": "off",
+      "@typescript-eslint/camelcase": "off",
       "@typescript-eslint/explicit-function-return-type": [
         "error",
         {
